--- a/src/components/Topbar/style.module.scss
+++ b/src/components/Topbar/style.module.scss
@@ -1,3 +1,16 @@
+.topbar {
+  color: var(--white);
+  background-color: var(--main-color1);
+
+  height: 4.5em;
+  padding: 0.5em;
+  padding-right: 1.5em;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .logo {
   height: 100%;
   display: flex;
