--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,6 +18,25 @@
   --main-color4: hsl(var(--hue), 0%, 10%);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
+}
+
+#root {
+  height: 100vh;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
