--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,13 +11,6 @@
   --black: hsl(0, 0%, 10%);
 }
 
-.dark-mode {
-  --main-color1: hsl(var(--hue), 80%, 30%);
-  --main-color2: hsl(var(--hue), 80%, 60%);
-  --main-color3: hsl(var(--hue), 50%, 50%);
-  --main-color4: hsl(var(--hue), 0%, 10%);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -39,4 +32,18 @@ li {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+::-webkit-scrollbar {
+  width: 1em;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--main-color4);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--main-color2);
+  border: 3px solid var(--main-color4);
+  border-radius: 9999em;
 }
