--- a/src/components/MainPage/index.module.scss
+++ b/src/components/MainPage/index.module.scss
@@ -16,6 +16,15 @@
         margin-bottom: .5em;
       }
     }
+
+    table, th, td {
+      border: 1px solid var(--main-color1)
+    }
+
+    th, td {
+      padding: .5em;
+      text-align: center;
+    }
   }
 }
 
@@ -41,3 +50,20 @@
     width: 18em;
   }
 }
+
+.users {
+  th, td {
+    width: 8em;
+  }
+
+  tr > th:first-child,
+  tr > td:first-child {
+    width: 3em;
+  }
+
+  tr > th:last-child,
+  tr > td:last-child {
+    width: 15em;
+  }
+}
+
